--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
         <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold" style="color: var(--accent-pink);">📋 Ensiklopedia Checklist Trofi</h1>
+            <h1 class="text-3xl sm:text-4xl font-bold" style="color: var(--accent-pink);">Uma Musume Trophy List</h1>
             <p class="mt-2 text-gray-400">Uma Musume Race Database G3-G1</p>
         </header>
 
